[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project gives data about primers."
keywords = []
name = "primerdata"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0.dev0+local"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://pypi.org/project/primerdata/"
Download = "https://pypi.org/project/primerdata/#files"
Index = "https://pypi.org/project/primerdata/"
Source = "https://github.com/johannes-programming/primerdata/"
